--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Poppins";
-  src: url(../fonts/Poppins-Regular.woff2);
+  src: url(../fonts/SpaceGrotesk-Regular.woff2);
 }
 
 * {
@@ -11,4 +11,87 @@
 
 body {
   font-family: "Poppins";
+  background-color: #d6c8f148;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.myaza-logo {
+  width: 35px;
+  border-radius: 15px;
+}
+
+.myaza-logo-text {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.welcoming-box {
+  display: flex;
+  flex-direction: flex;
+  justify-content: space-between;
+  width: 75%;
+  align-items: center;
+}
+
+.welcoming-text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.heyy {
+  font-size: 1.05rem;
+  color: #808080;
+}
+
+.dashboard-welcome {
+  font-size: 20px;
+  font-weight: bold;
+  color: #390c4e;
+}
+
+.about-usser-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
+
+.notification-icon i {
+  background-color: #b15fe771;
+  border-radius: 50%;
+  font-size: 25px;
+  color: #002fff;
+  padding: 8px;
+}
+
+.user-icon-container {
+  display: flex;
+  flex-direction: row;
+  gap: 3px;
+  align-items: center;
+}
+
+.user-icon-container i {
+  font-size: 20px;
+  color: #8211af;
+}
+
+.user-image-icon {
+  width: 40px;
+  height: 40px;
+  background-color: #b15fe771;
+  border-radius: 50%;
+  padding: 2px;
 }
